powered refactor and more fixes